--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "apexcharts": "^3.51.0",
     "axios": "^1.3.1",
+    "chart.js": "^4.4.5",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "file-saver": "^2.0.5",
@@ -35,6 +36,7 @@
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-big-calendar": "^1.13.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.13.0",
     "react-router-dom": "^6.24.1",
