--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@mui/icons-material": "^5.15.20",
     "@mui/lab": "^5.0.0-alpha.170",
-    "@mui/material": "^5.16.1",
+    "@mui/material": "^5.16.7",
+    "@mui/styles": "^6.1.7",
+    "@mui/system": "^6.1.7",
     "@mui/x-data-grid": "^7.11.1",
     "@mui/x-date-pickers": "^7.7.1",
     "@react-pdf-viewer/core": "^3.12.0",
